[tool.poetry]
name = "gym-main"
version = "0.1.0"
description = ""
authors = ["Dima2009-crupto <dimaparoldima1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-wtf = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
